--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
 		"vite": "^5.2.8",
 		"vitest": "^1.4.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"roughjs": "^4.6.6"
+	}
 }
